<resources>
    <string name="app_name">Haallo</string>
    <string name="google_maps_api_key">AIzaSyDfNQtoDkZ9yAGgHmeCRWr7xQ7yxMVzc3U</string>
    <string name="label_chat">Chat</string>
    <string name="label_story">Story</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_call">Call</string>
    <string name="label_calls">Calls</string>
    <string name="label_settings">Settings</string>
    <string name="label_username">Username</string>
    <string name="label_name">Name</string>
    <string name="label_status">Status</string>
    <string name="label_account">Account</string>
    <string name="label_privacy">Privacy</string>
    <string name="label_notification">Notification</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_night_mode">Night Mode</string>
    <string name="label_others">Others</string>
    <string name="label_logout">Logout</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_about">About</string>
    <string name="label_done">Done</string>
    <string name="label_profile_photo">Profile Photo</string>
    <string name="label_enter_your_name">Enter your name</string>
    <string name="label_add_about">Add About</string>
    <string name="label_last_seen">Last Seen</string>
    <string name="label_blocked_contacts">Blocked Contacts</string>
    <string name="label_all_contacts">All Contacts</string>
    <string name="label_everyone">Everyone</string>
    <string name="label_my_contacts">My Contacts</string>
    <string name="label_nobody">Nobody</string>
    <string name="label_remove_account">Remove Account</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_story_privacy">Story Privacy</string>
    <string name="label_wallpaper">Wallpaper</string>
    <string name="label_help">Help</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_upload_from_gallery">Upload from gallery</string>
    <string name="label_capture_with_camera">Capture with camera</string>
    <string name="label_remove_wallpaper">Remove Wallpaper</string>
    <string name="label_conversation_tones">Conversation tones</string>
    <string name="label_message_notification">Message notifications</string>
    <string name="label_default_ringtone">Default ringtone</string>
    <string name="label_vibrate">Vibrate</string>
    <string name="label_default">Default</string>
    <string name="label_group_notification">Group notifications</string>
    <string name="label_call_notification">Call notifications</string>
    <string name="label_notification_tone">Notification tone</string>
    <string name="label_off">Off</string>
    <string name="label_short">Short</string>
    <string name="label_long">Long</string>
    <string name="label_edit">Edit</string>
    <string name="label_my_story">My Story</string>
    <string name="label_add_to_my_story">Add to my story</string>
    <string name="label_broadcast">Broadcast</string>
    <string name="label_starred">Starred</string>
    <string name="label_starred_messages">Starred messages</string>
    <string name="label_message">Message</string>
    <string name="label_archived">Archived</string>
    <string name="label_mobile_no">Mobile No</string>
    <string name="label_password">Password</string>
    <string name="label_select_gender">Select Gender</string>
    <string name="label_address_not_found">Address not found</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="max_length_name">14</string>
    <string name="max_length_about">140</string>
    <string name="msg_this_not_your_username_or_pin">This not your username or pin, this name will be visible to your Haallo contacts.</string>
    <string name="msg_name_can_not_empty">Name can\'t empty</string>
    <string name="msg_about_can_not_empty">About can\'t empty</string>
    <string name="msg_some_permission_denied">Some permissions were denied</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="msg_please_allow_all_required_permission">Please allow all required permissions to continue.</string>
    <string name="msg_please_allow_storage_permission">Please allow storage permission to select photo.</string>
    <string name="msg_please_allow_camera_permission">Please allow camera permission to capture photo.</string>
    <string name="msg_please_allow_location_permission">Please allow location permission to detect your current location.</string>
    <string name="msg_please_allow_contact_permission_new_group">Please allow contact permission to create new group.</string>
    <string name="msg_allow_permission_from_settings">Allow storage permission from device Settings -> Apps -> Haallo -> Permissions.</string>
    <string name="msg_can_not_create_destination_folder">Can not create destination folder.</string>
    <string name="msg_can_not_create_destination_file">Can not create destination file.</string>
    <string name="msg_are_you_sure_do_you_want_remove_your_account">Are you sure, Do you want to remove you account?</string>
    <string name="msg_your_account_deleted">Your account deleted successfully…</string>
    <string name="msg_are_you_sure_do_you_want_remove_wallpaper">Are you sure, Do you want to remove chat wallpaper?</string>
    <string name="msg_chat_wallpaper_set_successfully">Chat wallpaper set successfully…</string>
    <string name="msg_chat_wallpaper_removed">Chat wallpaper removed successfully…</string>
    <string name="msg_conversation_tones">Play sounds for incoming and outgoing messages</string>
    <string name="msg_gps_settings">GPS is settings</string>
    <string name="msg_gps_settings_confirmation">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="msg_getting_current_location_please_wait">Getting your current location, please wait for a moment</string>
    <string name="msg_getting_current_location_failed">Getting your current location failed</string>
    <string name="msg_profile_updated_successfully">Profile updated successfully</string>
    <string name="msg_chat_removed">Chat removed!</string>
    <string name="msg_no_records_found">No records found</string>
    <string name="msg_select_at_least_one_participant">Please Select at least one participant</string>
    <string name="error_in_finding_file_path">Error in finding file path</string>
    <string name="error_enter_mobile_number">Please enter mobile number</string>
    <string name="error_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="error_enter_valid_password">Please enter valid password</string>
    <string name="error_password_length_must_be_more_than_characters">Password length must be more than or equal to 8 characters</string>
    <string name="error_please_enter_confirm_password">Please enter confirm password</string>
    <string name="error_password_did_not_match">Password didn\'t match</string>
    <string name="help_text_1001">Live chat requires a support team that\'s ready to answer questions, but it also requires to tool to help you chat with customers from your site. There\s a ton of options, from live chat tools built into support center apps, to standalone chat tools that can integrate with your favourite support apps.</string>
    <string name="help_text_1002">Just need a chat tool, for a simple way to customize a chat box, add it to your site, and start interacting with your customers in real time? These apps are the best tools for just that. They\'re focused on chat, so they\'ll include the best features for talking to customers live and then they\'ll integrate with the help desk and other apps you already use.</string>
    <string name="crop_image_activity_title">Crop</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="error_exception">Some exception occurred</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="network_error">Network Error</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="server_error">Server Error</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="error_something_went_wrong_please_retry">Something went wrong please retry</string>
    <string name="session_error_please_re_login">Session Error Please Re-Login</string>
    <string name="session_error_please_try_again">Session error please try again</string>
    <string name="back_press_exit_line">If you want exit Please press back Button again.</string>
    <string name="loading">Loading…</string>
    <string name="search_hint">Search…</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="you_have_to_grant_permissions">You have to grant permissions in order to use this App</string>
    <string name="ok">OK</string>
    <string name="no_close_the_app">NO Close The App</string>
    <string name="select_a_language">Select a language</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_login">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_line"><u>Forgot Password?</u></string>
    <string name="sign_in_cancelled">Cancelled</string>
    <string name="default_status">Hey I am using Haallo!</string>
    <string name="enter_registered_mobile_number">Enter registered mobile number</string>
    <string name="log_in">Log In</string>
    <string name="no_account">No Account?</string>
    <string name="otp_will_be_sent_on_the_above_number">*OTP will be sent on the above number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="by_tapping_continue_you_agree_to_our">By tapping \"Continue\" you agree to our</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="_2019_haallo_privacy_policy">"\u00a9" 2019 Haallo Privacy Policy</string>
    <string name="continue_text">Continue</string>
    <string name="image">image</string>
    <string name="welcome_to_haallo">Welcome to Haallo!</string>
    <string name="free_message_and_calls_to_haallo_users">Free messages and calls to Haallo users.</string>
    <string name="make_messaging_fun_with_stickers">Make messaging fun with stickers!</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="report_user">Report User</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">UnBlock User</string>
    <string name="un_mute_notification">UnMute Notifications</string>
</resources>