<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.privacysetting.PrivacySettingActivity">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/color_1F3257">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/outline_arrow_back_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_toEndOf="@+id/ivBack"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/label_others"
            android:textColor="@color/md_white"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlHeader"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStoryPrivacy"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/label_story_privacy"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_dp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:background="@color/md_grey300" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotifications"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/label_notifications"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_dp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:background="@color/md_grey300" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAllContacts"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/label_all_contacts"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_dp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:background="@color/md_grey300" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWallpaper"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/label_wallpaper"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_dp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:background="@color/md_grey300" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHelp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/label_help"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</RelativeLayout>