<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWindowBackground"
    android:orientation="vertical"
    android:padding="@dimen/_4sdp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_toStartOf="@+id/ivClose"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/label_select_gender"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/outline_close_24"
            android:tint="@color/colorIconTint" />

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:buttonTint="@color/colorText"
            android:checked="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/male"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_11sdp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:buttonTint="@color/colorText"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/female"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_11sdp" />

    </RadioGroup>

</LinearLayout>